--- a/views/root.erb
+++ b/views/root.erb
@@ -1,1 +1,7 @@
 <h1>Hi</h1>
+<form action="/search">
+  <input type="radio" name="set_of_parks" value="two" id="two" select>Two Parks
+  <input type="radio" name="set_of_parks" value="three" id="three">Three Parks
+
+  Find park by ID: <input class="number" name="id">
+</form>
